# video-rough-cut

./: DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_INTEGRATION.md  USERGUIDE.md  index.html  package-lock.json  package.json  start.bat  start.sh
.github/workflows/: build.yml
dmg/: 视频粗剪工具_1.0.0_aarch64.dmg
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web-version/: index.html
